--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,13 @@
             </intent-filter>
         </activity>
         <!-- Goolge Maps API Key -->
-        <!-- CEIBA AIzaSyB858BMD1eqSi9PRLzuZ1VzM1RKNeErklU-->
+        <!-- CEIBA -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyC0hj-0gJ4ns82L5S0iiMwjialu3fbQCj4" />
+            android:value="AIzaSyB858BMD1eqSi9PRLzuZ1VzM1RKNeErklU" />
+        <!-- Portatil CASA FELIPE -->
+        <!--<meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyC0hj-0gJ4ns82L5S0iiMwjialu3fbQCj4" />-->
     </application>
 </manifest>
