--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,10 +28,11 @@
             </intent-filter>
         </activity>
         <!-- Goolge Maps API Key -->
-        <!-- CEIBA -->
+        <!--keytool -list -v -keystore ~/.android/debug.keystore -alias androiddebugkey -storepass android -keypass android-->
+        <!-- Foronda Ceiba -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyB858BMD1eqSi9PRLzuZ1VzM1RKNeErklU" />
+            android:value="@string/apikey_maps_foronda" />
         <!-- Portatil CASA FELIPE -->
         <!--<meta-data
             android:name="com.google.android.maps.v2.API_KEY"
